# wazuh-rust-tui

./: Cargo.toml  Makefile  README.md
src/: main.rs
src/api/: mod.rs  tests.rs
src/app/: filter.rs  filter_tests.rs  mod.rs
src/config/: mod.rs
src/models/: mod.rs
src/ui/: agents.rs  common.rs  dashboard.rs  groups.rs  json.rs  logs.rs  mod.rs  popups.rs  security.rs  theme.rs
