[package]
name = "wazuh-rust-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = "0.26"
crossterm = { version = "0.27", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
toml = "0.8"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
config = "0.11"
directories = "5.0"
futures-util = "0.3"
